--- a/TASKS/Task1/style.css
+++ b/TASKS/Task1/style.css
@@ -1,19 +1,95 @@
-body{
-    background-color: #f9f9f9;
-    font-family: Arial, sans-serif;
-    margin: 0;
+*{
     padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #fafafa;
+    color: #333;
 }
 header{
     background-color: #222;
-    color: yellow;
+    color: white;
     text-align: center;
-    padding: 20px 0;
+    padding: 1.5rem 0;
 }
-h1{
-    font-size: 2.5rem;
+h1,h2,h3{
+    color: #0077cc;
+    margin-bottom: 0.5rem;
 }
 p{
-    line-height: 1.6;
-    color: #d01313;
+    line-height: 1.7;
+    margin-bottom: 1rem;
+    color: green;
+}
+a{
+    color: red;
+    text-decoration: none;
+}
+a:hover{
+    color: blue;
+    text-decoration: underline;
+}
+article{
+    background-color: #c3f804;
+    padding: 20px;
+    border: 20px solid #0077cc;
+    margin: 20px; 
+    border-radius: 10px;
+}
+main{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    color: green;
+}
+article{
+    flex: 3;
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+}
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 40px;
+    background-color: #222;
+    color: white;
+}
+.navbar h1{
+    font-size: 1.5rem;
+}
+.navbar nav a{
+    color: white;
+    margin-left: 20px;
+    text-decoration: none;
+}
+.navbar nav a:hover{
+    text-decoration: underline;
+    color: #0077cc;
+}
+.card-container{
+    display: flex;
+    gap: 20px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin: 20px;
+    background-color: #c3f804;
+}
+.card{
+    flex: 1 1 250px;
+    background: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+footer{
+    display: flex;
+    background-color: yellow;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
 }
